cm4all-workshop (0.2.2) unstable; urgency=low

  * build with libevent 1.1, show libevent information
  * column "id" should be a primary key
  * fixed gcc warning on PowerPC due to char being unsigned
  * check "time_done IS NULL" for improved index usage
  * added row limit to pg_select_new_jobs()

 --

cm4all-workshop (0.2.1) unstable; urgency=low

  * increment num_counters in workplace_full_plan_names(), this fixes a
    bug where some plans can exceed their concurrency limit
  * plans which are already running have a lower priority
  * fixed getopt optstring
  * generate XHTML documentation in UTF-8

 -- Max Kellermann <mk@cm4all.com>  Thu, 26 Apr 2007 10:37:11 +0200

cm4all-workshop (0.2.0) unstable; urgency=low

  * bugfix: added missing 'return' when the concurrency limit is reached
  * update the plan filter after a new job is started
  * interrupt queue_run() when the plan filter has been changed
  * do not set a new timeout when the queue is disabled
  * try to reconnect to PostgreSQL every 10 seconds
  * implemented a per-plan maximum concurrency
  * set default file's mode to 0600
  * documented the debian default file

 -- Max Kellermann <mk@cm4all.com>  Fri, 16 Feb 2007 11:06:39 +0100

cm4all-workshop (0.1.6) unstable; urgency=low

  * fixed endless loop in expand_vars()
  * pass PostgreSQL DSN as environment variable, for security reasons
  * increased shutdown timeout to 60 seconds
  * moved the -doc package to section non-free/doc

 -- Max Kellermann <mk@cm4all.com>  Mon, 12 Feb 2007 11:17:48 +0100

cm4all-workshop (0.1.5) unstable; urgency=low

  * fixed "SIGHUP" typo in init script
  * removed ellipsis from init script messages
  * use libcm4all-daemon
  * don't build with cdbs
  * check PostgreSQL notifies after every query

 -- Max Kellermann <mk@cm4all.com>  Tue,  6 Feb 2007 10:04:37 +0100

cm4all-workshop (0.1.4) unstable; urgency=low

  * set supplementary groups
  * delete pidfile before exiting
  * moved VERSION to version.h