@@ -149,8 +149,8 @@ int pg_select_new_jobs(PGconn *conn,
                        "FROM jobs WHERE node_name IS NULL AND time_done IS NULL AND exit_status IS NULL "
                        "AND (scheduled_time IS NULL OR NOW() >= scheduled_time) "
                        "AND plan_name = ANY ($1::TEXT[]) "
-                       "AND plan_name <> ALL ($2::TEXT[]) "
-                       "ORDER BY priority, plan_name = ANY ($3::TEXT[]), time_created "
+                       "AND plan_name <> ALL ($2::TEXT[] || $3::TEXT[]) "
+                       "ORDER BY priority, time_created "
                        "LIMIT $4",
                        4, NULL, params, NULL, NULL, 0);
     if (PQresultStatus(res) != PGRES_TUPLES_OK) {
